--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
                     </li>
                     
         			<!-- SLIDE 3 -->
-                    <li data-transition="slidevertical" data-slotamount="1" data-masterspeed="1000" data-thumb="https://lh4.googleusercontent.com/O2_QGV_yIFwP6Gnpq4WpFfmjqckgII2ADcuBNlO6oXHIC64phMmRgxTprccdvMWMw1j1-WCa__C8yBW2PDrVanAeXI6My7xpc-J2uD8bcIWxGLlXWuH9=w1280"  data-saveperformance="off"  data-title="Slide">
+                    <li data-transition="slidevertical" data-slotamount="1" data-masterspeed="1000" data-thumb="/assets/FB_IMG_1579106306955.jpg"  data-saveperformance="off"  data-title="Slide">
                         <!-- MAIN IMAGE -->
                         <img src="https://lh4.googleusercontent.com/O2_QGV_yIFwP6Gnpq4WpFfmjqckgII2ADcuBNlO6oXHIC64phMmRgxTprccdvMWMw1j1-WCa__C8yBW2PDrVanAeXI6My7xpc-J2uD8bcIWxGLlXWuH9=w1280"  alt="fullslide6"  data-bgposition="center top" data-bgfit="cover" data-bgrepeat="no-repeat">
                         <!-- LAYERS -->
